# ncspot

./: .gitignore  CHANGELOG.md  Cargo.toml  flake.nix
doc/: users.md
src/: application.rs  command.rs  commands.rs  config.rs  library.rs  main.rs  queue.rs  spotify.rs  spotify_worker.rs  theme.rs
src/jukebox/: analysis.rs  driver.rs  graph.rs  mod.rs  model.rs  remixer.rs  render.rs  settings.rs
src/lyrics/: cache.rs  lrc.rs  mod.rs  model.rs  provider.rs  romanize.rs
src/lyrics/providers/: lrclib.rs  mod.rs  musixmatch.rs  netease.rs  spotify.rs
src/model/: playlist.rs
src/mpris/: metadata.rs  mod.rs  player.rs  playlists.rs  root.rs  tracklist.rs
src/ui/: cover.rs  image_render.rs  jukebox.rs  jukebox_settings.rs  jukebox_song_settings.rs  lyrics.rs  mod.rs
