[package]
name = "ncspot"
readme = "README.md"
version = "1.3.4"
description = "ncurses Spotify client written in Rust using librespot, inspired by ncmpc and the likes."
exclude = ["images/**"]
keywords = ["spotify", "ncurses", "librespot", "terminal"]
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[badges]
maintenance = {status = "actively-developed"}

[workspace]
members = [
    ".",
    "xtask"
]

[workspace.package]
authors = ["Henrik Friedrichsen <henrik@affekt.org>"]
edition = "2024"
license = "BSD-2-Clause"
repository = "https://github.com/hrkfdn/ncspot"

[workspace.lints.clippy]
enum_glob_use = "warn"
use_self = "deny"
multiple_inherent_impl = "deny"

[lints]
workspace = true

[profile.release]
lto = true
codegen-units = 1

[profile.optimized]
inherits = "release"
lto = false
codegen-units = 16

[dependencies]
anyhow = "1"
chrono = "0.4"
clap = "4.6.1"
arboard = {version = "3.6", optional = true}
crossbeam-channel = "0.5"
zbus = {version = "5.16.0", default-features = false, features = ["tokio"], optional = true}
fern = "0.7"
futures = "0.3"
image = {version = "0.25", default-features = false, features = ["jpeg", "png"], optional = true}
ioctl-rs = {version = "0.2", optional = true}
libc = "0.2.186"
librespot-core = "0.8.0"
librespot-metadata = "0.8.0"
librespot-oauth = "0.8.0"
librespot-playback = {version = "0.8.0", default-features = false, features = ["native-tls"]}
librespot-protocol = "0.8.0"
log = "0.4.32"
pancurses = {version = "0.17.0", optional = true}
parse_duration = "2.1.1"
pinyin = "0.10"
http = "1"
platform-dirs = "0.3.0"
rand = "0.10"
regex = "1"
reqwest = {version = "0.13", features = ["blocking", "json", "query"]}
serde = "1.0"
serde_cbor = "0.11.2"
serde_json = "1.0"
strum = "0.28"
strum_macros = "0.28"
tokio = {version = "1", features = ["rt-multi-thread", "sync", "time", "net"]}
tokio-util = {version = "0.7.18", features = ["codec"]}
tokio-stream = {version = "0.1.18", features = ["sync"]}
toml = "1.1"
unicode-width = "0.2.2"
url = "2.5"
viuer = {version = "0.11", default-features = false, features = ["icy_sixel"], optional = true}

[target.'cfg(unix)'.dependencies]
signal-hook = "0.4.4"

[dependencies.rspotify]
default-features = false
features = ["client-ureq", "ureq-native-tls"]
version = "0.16.1"

[dependencies.cursive]
default-features = false
version = "0.21.1"

[dependencies.notify-rust]
default-features = false
version = "4"
# Use zbus, which we already depend on, instead of dbus.
features = ["z"]
optional = true

[features]
alsa_backend = ["librespot-playback/alsa-backend"]
cover = ["image", "ioctl-rs", "viuer"] # Support displaying the album cover
jukebox-graphics = ["image", "ioctl-rs", "viuer"] # Render the jukebox visualizer as an image
default = ["share_clipboard", "pulseaudio_backend", "mpris", "notify", "crossterm_backend"]
mpris = ["zbus"] # Allow ncspot to be controlled via MPRIS API
ncurses_backend = ["cursive/ncurses-backend"]
notify = ["notify-rust"] # Show what's playing via a notification
crossterm_backend = ["cursive/crossterm-backend"]
pancurses_backend = ["cursive/pancurses-backend", "pancurses/win32"]
portaudio_backend = ["librespot-playback/portaudio-backend"]
pulseaudio_backend = ["librespot-playback/pulseaudio-backend"]
rodio_backend = ["librespot-playback/rodio-backend"]
share_clipboard = ["arboard", "arboard/wayland-data-control"] # Share a link to the system clipboard
share_selection = ["arboard", "arboard/wayland-data-control"] # Use the primary selection for sharing - linux and bsd only
termion_backend = ["cursive/termion-backend"]

[package.metadata.deb]
assets = [
  ["target/release/ncspot", "usr/bin/", "755"],
  ["misc/ncspot.desktop", "usr/share/applications/", "644"],
  ["images/logo.svg", "usr/share/icons/hicolor/scalable/apps/ncspot.svg", "644"],
  ["README.md", "usr/share/doc/ncspot/README.md", "644"],
]
depends = "$auto"
extended-description = """\
ncurses Spotify client written in Rust using librespot. \
It is heavily inspired by ncurses MPD clients, such as ncmpc."""
license-file = ["LICENSE"]
priority = "optional"
section = "sound"

# Pull the librespot CDN-URL fallback fix (librespot-org/librespot#1725, merged as
# PR #1722) ahead of a crates.io release: on a non-206 fetch response, fall back to
# the next CDN URL instead of giving up on the first reachable-but-broken edge (e.g.
# an HTTP 500 from a draining node), which otherwise marks the track Unavailable even
# though working CDN URLs are in the same storage-resolve response.
#
# Pinned to the merge commit on `dev` (still version 0.8.0). All librespot crates are
# patched to the same rev so they resolve from a single git workspace (avoids a
# duplicate librespot-core/-protocol from mixing crates.io + git sources). Drop this
# once a librespot release that includes #1722 is published and the deps are bumped.
[patch.crates-io]
librespot-audio = { git = "https://github.com/librespot-org/librespot", rev = "db1ef7ab8c5ebd78edea0ba20f34feb21bd0e195" }
librespot-core = { git = "https://github.com/librespot-org/librespot", rev = "db1ef7ab8c5ebd78edea0ba20f34feb21bd0e195" }
librespot-metadata = { git = "https://github.com/librespot-org/librespot", rev = "db1ef7ab8c5ebd78edea0ba20f34feb21bd0e195" }
librespot-oauth = { git = "https://github.com/librespot-org/librespot", rev = "db1ef7ab8c5ebd78edea0ba20f34feb21bd0e195" }
librespot-playback = { git = "https://github.com/librespot-org/librespot", rev = "db1ef7ab8c5ebd78edea0ba20f34feb21bd0e195" }
librespot-protocol = { git = "https://github.com/librespot-org/librespot", rev = "db1ef7ab8c5ebd78edea0ba20f34feb21bd0e195" }
